--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,50 @@
+/* * {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+} */
+
+legend{
+    margin-bottom: 20px;
+}
+
+form {
+    border: 1px solid #000;
+    padding: 100px;
+    border-radius: 20px;
+    background-color: #eee;
+}
+
+#offset{
+    margin-bottom: 20px;
+}
+
+#msgcifrar{
+    margin-bottom: 10px;
+}
+
+#botao{
+    border-radius: 10px;
+    padding: 2px 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 body{
     background-color:white;
 }
 
-.caixa {
-    background-color: turquoise;
+#main-container {
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
 }
-
-label{
-    display: block;
-    font-size: 20px;
-}
-
-
  
+#resposta{
+    padding: 2px 20px;
+}
+
+input{
+    display: block;
+}
